# Track

./: .gitignore  README.md
backend/: .env.example  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
backend/app/: config.py  database.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: activity.py  analytics.py  checkpoints.py  coach.py  food_logs.py  reports.py  router.py  users.py  workout_logs.py
backend/app/core/: exceptions.py  logging.py  portions.py  security.py
backend/app/models/: __init__.py  base.py  behavior_event.py  coach_session.py  correction_event.py  daily_report.py  daily_summary.py  food_log.py  food_memory.py  nutrition_cache.py  progress_checkpoint.py  progress_photo.py  step_log.py  user.py  user_preference.py  workout_log.py
backend/app/repositories/: __init__.py  base.py  checkpoint_repository.py  daily_report_repository.py  daily_summary_repository.py  food_log_repository.py  food_memory_repository.py  nutrition_cache_repository.py  user_repository.py  workout_log_repository.py
backend/app/schemas/: activity.py  analytics.py  checkpoint.py  coach.py  common.py  daily_summary.py  food_log.py  report.py  user.py  workout_log.py
backend/app/services/: analytics_service.py  checkpoint_service.py  daily_summary_service.py  estimation_service.py  food_service.py  report_service.py  user_service.py  workout_service.py
backend/app/services/ai/: client.py  coach_agent.py  embedding_service.py  llm_service.py  report_service.py  vision_service.py
backend/app/services/storage/: __init__.py  base.py  local_storage.py
backend/data/: recipes.csv
backend/migrations/: env.py
backend/migrations/versions/: 20260524_0000_phase1_initial_schema.py  20260524_0001_phase2_search_indexes.py  20260524_0002_phase3_checkpoints.py  20260524_0003_phase4_adaptive_learning.py
backend/scripts/: analyze_datasets.py  create_migration.ps1  dev_setup.ps1  dry_run_import.py  import_nutrition_data.py  init_db.sql
backend/tests/: conftest.py  test_food_logs.py  test_users.py  test_workout_logs.py
frontend/: .env.example  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/(app)/: layout.tsx
frontend/public/: manifest.json
mobile/: README.md  analysis_options.yaml  pubspec.yaml
mobile/lib/: app.dart  main.dart
mobile/test/: widget_test.dart
(+61 files in other folders)
